--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -41,6 +41,7 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "@eth-optimism/chugsplash": "^0.1.0",
     "@eth-optimism/core-utils": "^0.6.0",
     "@ethersproject/abstract-provider": "^5.4.1",
     "@ethersproject/abstract-signer": "^5.4.1",
@@ -83,7 +84,6 @@
     "ethers": "^5.4.5",
     "glob": "^7.1.6",
     "hardhat": "^2.2.1",
-    "hardhat-deploy": "^0.7.4",
     "hardhat-gas-reporter": "^1.0.4",
     "lint-staged": "11.0.0",
     "lodash": "^4.17.20",
