Add functionality to degenerate docs from natspec using hardhat-docgen

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -22,6 +22,7 @@
     "build:typescript": "tsc -p ./tsconfig.build.json",
     "build:contracts": "hardhat compile --show-stack-traces",
     "build:dump": "ts-node bin/take-dump.ts",
+    "autogen:docs": "hardhat docgen",
     "autogen:markdown": "node scripts/generate-markdown.js",
     "autogen:artifacts": "node scripts/generate-artifacts.js && node scripts/generate-deployed-artifacts.js",
     "test": "yarn test:contracts",
@@ -87,6 +88,7 @@
     "glob": "^7.1.6",
     "hardhat": "^2.3.0",
     "hardhat-deploy": "^0.9.3",
+    "hardhat-docgen": "^1.2.0",
     "hardhat-gas-reporter": "^1.0.4",
     "istanbul": "^0.4.5",
     "lint-staged": "11.0.0",
@@ -96,12 +98,12 @@
     "mkdirp": "^1.0.4",
     "mocha": "^8.4.0",
     "prettier": "^2.3.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.18",
     "random-bytes-seed": "^1.0.3",
     "rlp": "^2.2.6",
     "solhint": "^3.3.6",
-    "solidity-coverage": "^0.7.17",
-    "prettier-plugin-solidity": "^1.0.0-beta.18",
     "solhint-plugin-prettier": "^0.0.5",
+    "solidity-coverage": "^0.7.17",
     "ts-generator": "0.0.8",
     "ts-node": "^10.0.0",
     "typechain": "^5.1.0",
