--- a/ops/docker-compose.yml
+++ b/ops/docker-compose.yml
@@ -101,6 +101,8 @@ services:
       - l1_chain
       - deployer
       - l2geth
+    deploy:
+      replicas: 0
     build:
       context: ..
       dockerfile: ./ops/docker/Dockerfile.packages
